<resources>
    <string name="app_name">Biofeedback</string>
    <string name="divider_image_content">divider</string>
    <string name="home_label">Biofeedback</string>
    <string name="global_settings_label">Global settings</string>
    <string name="recording_settings_label">Recording Settings</string>
    <string name="configurations_label">Configurations</string>
    <string name="recordings_label">Recordings</string>
    <string name="new_configurations_label">New Configurations</string>
    <string name="new_recordings_label">New Recording</string>
     <string name="gm_settings">Settings</string>
     <string name="gm_help">Help</string>
     <string name="gm_about">About</string>
     <string name="gm_help_title">App tips</string>
     <string name="gm_help_message"> - Swipe a recording or configuration to delete it\n\n- Long press a configuration to edit </string>
     <string name="nr_recording_settings">Settings</string>
     <string name="nr_restore_zoom_text">Restore zoom</string>
    <string name="ha_title">Welcome,</string>
    <string name="ha_description">This application provides the ability to make and send recordings of physiological signals through the use of a BioPlux device.\nBefore recording make sure of two things:\n\n\t1) Have the BioPlux device on, and with enough battery to make a recording. \n\n\t2) Have the mobile computer with a higher than 50% battery and have Bluetooth turned on.</string>
    <string name="ha_button1">Start Recording</string>
    <string name="ha_button2">Browse Recordings</string>
    <string name="sa_category_title">CONFIRMATION DIALOGS</string>
    <string name="sa_nr_category_title">GRAPHS</string>
    <string name="sa_configuration_title">Deleting configurations</string>
    <string name="sa_recording_title">Deleting recordings</string>
    <string name="sa_configuration_summary">Never ask for confirmation again after deleting a configuration by swiping it off the screen</string>
    <string name="sa_recording_summary">Never ask for confirmation again after deleting a recording by swiping it off the screen</string>
    <string name="sa_draw_in_background_title">Draw in background</string>
    <string name="sa_draw_in_background_summary">When checked, the graph(s) will be updated in the background. This feature may drain your battery faster</string>
    <string name="sa_zoom_title">Zoom per click</string>
    <string name="sa_zoom_dialog_title">Zoom level</string>
    <string name="sa_zoom_default_summary">The default amount is 500 miliseconds</string>
    <string name="sa_zoom_unit_measure">miliseconds</string>
    <string name="sa_zoom_summary_message">The current zoom in/out value is</string>
    <string name="ca_header_title">Select a configuration</string>
    <string name="ca_button">Add a new configuration</string>
    <string name="ca_info_recording_canceled">Recording canceled</string>
    <string name="ca_name_dialog_title">New recording name</string>
    <string name="ca_confirm_dialog_title">Are you sure?</string>
    <string name="ca_confirm_dialog_message">The configuration selected will be deleted from your phone</string>
    <string name="ca_confirm_dialog_positive">Confirm</string>
    <string name="ca_confirm_dialog_negative">Cancel</string>
    <string name="ca_error_dialog_title">An error occurred</string>
    <string name="ca_error_saving_configs_message">There was a problem saving configurations to the internal database</string>
    <string name="ca_error_loading_configs_message">There was a problem loading configurations from internal database</string>
    <string name="ca_error_loading_recordings_message">There was a problem loading recordings from internal database</string>
    <string name="ca_error_deleting_configuration_message">There was a problem deleting the selected configuration from internal database</string>
    <string name="ca_error_updating_configuration_message">There was a problem updating the selected configuration from internal database</string>
    <string name="ca_empty_list">There are no configurations\nTo add one, press the button below</string>
    <string name="ca_configuration_removed">Configuration removed</string>
    <string name="ca_dialog_null_name">Recording name is required</string>
    <string name="ca_dialog_duplicate_name">Recording name already exists</string>
    <string name="cl_active">Active</string>
    <string name="cl_display">Display</string>
    <string name="ra_header_title">Stored recordings</string>
    <string name="ra_empty_list">There are no recordings</string>
    <string name="ra_recording_removed">Recording removed</string>
    <string name="ra_duration">Duration </string>
    <string name="ra_send_dialog_title">Share via</string>
    <string name="ra_confirm_dialog_title">Are you sure?</string>
    <string name="ra_confirm_dialog_message">The recording will be deleted</string>
    <string name="ra_confirm_dialog_positive">Confirm</string>
    <string name="ra_confirm_dialog_negative">Cancel</string>
    <string name="ra_error_message_deleting_recording_from_database">There was a problem deleting the recording from the data base</string>
    <string name="ra_error_message_deleting_recording_from_filesystem">There was a problem deleting the recording from the file system</string>
    <string name="ra_display_path_dialog_title">The recording file is too big</string>
    <string name="ra_display_path_dialog_message">The file size is larger than 20MB and therefore cannot be sent via email.\nTo transfer the file, connect the device via usb to a pc and go to Bioplux folder</string>
    <string name="nc_header_title">New configuration</string>
    <string name="nc_configuration_name">Configuration name</string>
    <string name="nc_mac_address">MAC address</string>
    <string name="nc_mac_address_hint">00:B0:D0:86:BB:F7</string>
    <string name="nc_frequency_reception">"Reception frequency"</string>
    <string name="nc_frequency_reception_default">"500"</string>
    <string name="nc_frequency_metric">"Hz"</string>
    <string name="nc_frequency_sampling">"Sampling frequency"</string>
    <string name="nc_frequency_sampling_default">"50"</string>
    <string name="nc_bits">Bits per signal</string>
    <string name="nc_bits_eight">8</string>
    <string name="nc_bits_twelve">12</string>
    <string name="nc_button_active_channels">Select channels to activate</string>
    <string name="nc_button_channels_to_display">Select channels to display</string>
    <string name="nc_button_cancel">Cancel</string>
    <string name="nc_button_submit">Submit</string>
    <string name="nc_channels_to_activate">Channels to activate: </string>
    <string name="nc_error_channels_to_display">Channels to display have to be less than 3</string>
    <string name="nc_error_max_frequency">Max frequency is </string>
    <string name="nc_error_min_frequency">Min frequency is </string>
    <string name="nc_error_button_channels_to_display">Please select channels to activate first</string>
    <string name="nc_error_message_name_null">Configuration name is required</string>
   	<string name="nc_error_message_name_duplicate">Configuration name already exists</string>
    <string name="nc_error_message_mac">Invalid mac address</string>
    <string name="nc_error_message_active_channels">Channels to activate not selected</string>
    <string name="nc_error_message_channels_to_display">Channels to display not selected</string>
    <string name="nc_info_created">Configuration created</string>
    <string name="nc_info_modified">Configuration modified successfully</string>
    <string name="nc_info_canceled">Configuration canceled</string>
    <string name="nc_dialog_title_channels_to_display">  Select channels to display</string>
    <string name="nc_dialog_title_channels_to_activate">  Select channels to activate</string>
    <string name="nc_dialog_positive_button">Accept</string>
    <string name="nc_dialog_negative_button">Cancel</string>
    <string name="nc_dialog_with_sensor"> with sensor </string>
    <string name="nc_dialog_channel">Channel </string>
    <string name="nc_active_channels_list_adapter_comparation">electrocardiogram</string>
    <string name="nr_configuration_name">Configuration name: </string>
    <string name="nr_reception_frequency">Reception frequency: </string>
    <string name="nr_sampling_frequency">Sampling frequency: </string>
    <string name="nr_bits">Number of bits: </string>
    <string name="nr_active_channels">Active channels: </string>
    <string name="nr_button_start">Start recording</string>
    <string name="nr_bluetooth_not_supported">Your device does not support bluetooth</string>
    <string name="nr_button_stop">Stop recording</string>
    <string name="nr_info_started">Recording started</string>
    <string name="nr_info_rec_saved">Recording saved</string>
    <string name="nr_back_dialog_title">Are you sure?</string>
    <string name="nr_bluetooth_dialog_title">Bluetooth connection failed</string>
    <string name="nr_storage_error_dialog_title">Storage Error</string>
    <string name="nr_overwrite_dialog_title">Recording will be overwrited</string>
    <string name="nr_overwrite_dialog_message">The actual recording will be lost. Do you wish to proceed?</string>
    <string name="nr_overwrite_dialog_positive_button">Proceed</string>
    <string name="nr_back_dialog_message">If you wish to proceed, recording will be stopped and saved</string>
    <string name="nr_bluetooth_dialog_message">Bluetooth has to be enabled to connect to the Bioplux device</string>
    <string name="nr_back_dialog_positive_button">Proceed</string>
    <string name="nr_bluetooth_dialog_positive_button">Connect</string>
    <string name="nr_progress_dialog_title">Looking for Bioplux devices</string>
    <string name="nr_progress_dialog_message">Trying to connect to devices in range</string>
    <string name="nr_saving_dialog_title">Saving recording</string>
    <string name="nr_saving_dialog_adding_header_message">Adding header to recording text file</string>
    <string name="nr_saving_dialog_compressing_message">Compressing recording. This might take a minute</string>
    <string name="bp_address_incorrect">The specified MAC address is not correct</string>
    <string name="bp_adapter_not_found">No bluetooth adapter was found. Verify if an adapter is connected and turned on</string>
    <string name="bp_device_not_found">The Plux device could not be found. Verify that it is whithin range, turned on, and that the battery is OK (red led turned off)</string>
    <string name="bp_contacting_device">Communication with the device was lost. Verify that the Plux device is within range, and that the battery is OK (red led turned off)</string>
    <string name="bp_port_could_not_be_opened">The communication port does not exist or it is already being used</string>
    <string name="bp_error_writing_a_frame">An error occurred while writing a frame to you device internal storage</string>
    <string name="bp_error_saving_recording">There is not enough internal/external storage to save the recording</string>
    <string name="bp_positive_button">Got it</string>
    <string name="bs_header_name">Configuration name: </string>
    <string name="bs_header_date">Start date: </string>
    <string name="bs_header_frequency">Frequency: </string>
    <string name="bs_header_bits">Number of bits: </string>
    <string name="bs_header_duration">Duration: </string>
    <string name="bs_header_seconds">seconds</string>
    <string name="bs_header_active_channels">Active channels: </string>
    <string name="bs_notification_title">Device connected</string>
    <string name="bs_notification_message">Service running, receiving frames..</string>
    <string name="d_hint">Recording 1</string>
    <string name="d_confirmationCheck">Never ask for confirmation again </string>
</resources>