<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory
        android:key="pref_key_graph"
        android:title="@string/sa_nr_category_title" >

        <CheckBoxPreference
            android:key = "draw_in_background"
            android:defaultValue = "true"
            android:title = "@string/sa_draw_in_background_title"
            android:summary = "@string/sa_draw_in_background_summary" />
        
        <ceu.marten.ui.dialogs.SeekBarPreference
            android:key = "zoom"
            android:title = "@string/sa_zoom_title"
            android:summary = "@string/sa_zoom_default_summary"
            android:defaultValue = "500"
            android:max="5000">
        </ceu.marten.ui.dialogs.SeekBarPreference>
    </PreferenceCategory>

</PreferenceScreen>