<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <PreferenceCategory
        android:key="pref_key_dialogs"
        android:title="@string/sa_category_title" >
        <CheckBoxPreference
            android:key = "ask_confirmation_configuration"
            android:defaultValue = "false"
            android:title = "@string/sa_configuration_title"
            android:summary = "@string/sa_configuration_summary" />
        <CheckBoxPreference
            android:key = "ask_confirmation_recording"
            android:defaultValue = "false"
            android:title = "@string/sa_recording_title"
            android:summary = "@string/sa_recording_summary" />
    </PreferenceCategory>
    
    <PreferenceCategory
        android:key="pref_key_graph"
        android:title="@string/sa_nr_category_title" >

        <ceu.marten.ui.dialogs.SeekBarPreference
            android:key = "nr_zoom"
            android:title = "Set the amount of zoom per click"
            android:summary = "The default amount is 500 miliseconds"
            android:defaultValue = "500"
            android:max="5000"
			android:text=" miliseconds">
        </ceu.marten.ui.dialogs.SeekBarPreference>
    </PreferenceCategory>
</PreferenceScreen>