<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#fff" >

        <LinearLayout
            android:id="@+id/lyHeader"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@layout/header_gradient"
            android:paddingBottom="5dip"
            android:paddingTop="5dip" >

            <ImageView
                android:contentDescription="@string/divider_image_content"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/pluxlogo" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lyTitle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/lyHeader"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/txtTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:textColor="@color/grey"
                android:text="@string/ha_title"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/txtDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="15dp"
                android:textColor="@color/grey"
                android:text="@string/ha_description"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:layout_below="@id/lyTitle"
            android:orientation="vertical" >

            <Button
                android:layout_width="fill_parent"
                android:layout_height="45dip"
                android:onClick="onClickedStartRecording"
				android:layout_marginLeft="30dip"
				android:layout_marginRight="30dip"
				android:paddingRight="50dip"
                android:paddingLeft="30dip"
                android:gravity="center"
                android:maxLines="1"
                android:background="@drawable/button_selector"
                android:drawableEnd="@drawable/start"
                android:textColor="@color/grey"
                android:text="@string/ha_button1" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="45dip"
                android:onClick="onClickedBrowseRecordings"
                android:layout_marginLeft="30dip"
				android:layout_marginRight="30dip"
				android:paddingRight="50dip"
				android:gravity="center"
                android:paddingLeft="30dip"
				android:layout_marginTop="10dp"
                android:background="@drawable/button_selector"
                android:drawableEnd="@drawable/browse"
                android:textColor="@color/grey"
                android:text="@string/ha_button2"/>
        </LinearLayout>

        <TextView
            android:id="@+id/footer"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:text="@string/footer"
            android:textColor="@color/grey"
            android:background="@layout/header_gradient"
            android:textSize="@dimen/footerTxtSize" />
    </RelativeLayout>

</ScrollView>